[ADD] process images

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
    "source": [
     "from pathlib import Path\n",
     "import glob\n",
@@ -13,292 +11,392 @@
     "import pandas as pd\n",
     "import xlsxwriter\n",
     "import base64\n"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "/Users/ace/.virtualenvs/image-pro-env/lib/python3.9/site-packages/pandas/compat/__init__.py:124: UserWarning: Could not import the lzma module. Your installed Python is incomplete. Attempting to use lzma compression will result in a RuntimeError.\n",
+      "  warnings.warn(msg)\n"
+     ]
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Import the files"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 2,
    "source": [
-    "files = glob.glob('THUMBNAILS/*')"
-   ]
+    "files = glob.glob('Verified Photos/**/**.*')"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "source": [
+    "len(files)"
+   ],
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "2051"
+       "638"
       ]
      },
      "metadata": {},
      "execution_count": 3
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "source": [
-    "len(files)"
-   ]
+    "#df['Supplier Product Code'] = df['Supplier Product Code'].str.strip()"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "# image_dic = {re.split(\"[, \\./]+\",img)[2]:base64.b64encode(open(f'{img}', \"rb\").read()).decode('utf8') for img in files} "
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv('product.template.csv')    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#df['Supplier Product Code'] = df['Supplier Product Code'].str.strip()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# image_dic = {re.split(\"[, \\./]+\",img)[2]:base64.b64encode(open(f'{img}', \"rb\").read()).decode('utf8') for img in files} "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "image_dic = {}\n",
     "for img in files:\n",
     "    name_path = re.split(\"[\\./]+\",img)[1]\n",
-    "    name_path = name_path.replace(\" \", \"-\")\n",
     "    image_dic[name_path] =base64.b64encode(open(f'{img}', \"rb\").read()).decode('utf8')"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 10,
    "source": [
-    "img_df = pd.DataFrame(list(image_dic.items()),columns = ['Supplier Product Code','image']) "
-   ]
+    "list(image_dic.keys())[0]"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'ISUZU 4'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 10
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 11,
+   "source": [
+    "img_df = pd.DataFrame(list(image_dic.items()),columns = ['name','image']) "
+   ],
    "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "source": [
     "df_merged= pd.merge(df,\n",
     "img_df,\n",
     "how='outer',\n",
     "on='Supplier Product Code')"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/41/b0ty2l2d1xs8bk54ksrzgm080000gp/T/ipykernel_32137/958343236.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m df_merged= pd.merge(df,\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mimg_df\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mhow\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'outer'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m on='Supplier Product Code')\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": null,
    "source": [
     "non_dup_df = df_merged[~df_merged.duplicated(subset=['Supplier Product Code'])]"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": null,
    "source": [
     "ext_id_nan=non_dup_df[non_dup_df['External ID'].isna()]"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": null,
    "source": [
     "ext_id_not_nan=non_dup_df[~(non_dup_df['External ID'].isna())]"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": null,
    "source": [
     "image_not_nan=ext_id_not_nan[~(ext_id_not_nan['image'].isna())]"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": null,
    "source": [
     "image_not_nan.to_csv('output/final-images.csv')"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": null,
    "source": [
     "duplicates_df =df_merged[df_merged.duplicated(subset=['Supplier Product Code'])]"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
+   "execution_count": null,
+   "source": [
+    "ext_id_nan.sample()"
+   ],
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>External ID</th>\n",
+       "      <th>Supplier Product Code</th>\n",
+       "      <th>Image(Base 64 String)</th>\n",
+       "      <th>image</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3455</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MT01-0305-L</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>iVBORw0KGgoAAAANSUhEUgAAAZwAAAFtCAYAAAAzj9yFAA...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
        "     External ID Supplier Product Code  Image(Base 64 String)  \\\n",
        "3455         NaN           MT01-0305-L                    NaN   \n",
        "\n",
        "                                                  image  \n",
        "3455  iVBORw0KGgoAAAANSUhEUgAAAZwAAAFtCAYAAAAzj9yFAA...  "
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>External ID</th>\n      <th>Supplier Product Code</th>\n      <th>Image(Base 64 String)</th>\n      <th>image</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>3455</th>\n      <td>NaN</td>\n      <td>MT01-0305-L</td>\n      <td>NaN</td>\n      <td>iVBORw0KGgoAAAANSUhEUgAAAZwAAAFtCAYAAAAzj9yFAA...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      ]
      },
      "metadata": {},
      "execution_count": 50
     }
    ],
-   "source": [
-    "ext_id_nan.sample()"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": null,
    "source": [
     "stock_df = pd.read_csv('STOCK-ODOO.csv')"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": null,
    "source": [
     "stock_odoo_df=stock_df.drop(columns=['GODOWN','1ST FLOOR','DOWNSHOP','ITEMID','Internal Reference'])"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": null,
    "source": [
     "stock_odoo_df=stock_odoo_df.rename(columns={'Supplier/Supplier Product Code':'Supplier Product Code'})"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": null,
    "source": [
     "df_1=pd.merge(stock_odoo_df,ext_id_nan,how='right',on='Supplier Product Code')"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": null,
    "source": [
     "df_2=df_1[~df_1['External ID_x'].isna()]"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": null,
    "source": [
     "df_3= df_2.rename(columns={'External ID_x':'External ID'})"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": null,
    "source": [
     "df_3.to_csv('output/final-output-1.csv')"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
+   "execution_count": null,
+   "source": [
+    "df_3[df_3['image'].isna()]"
+   ],
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>External ID</th>\n",
+       "      <th>Supplier Product Code</th>\n",
+       "      <th>External ID_y</th>\n",
+       "      <th>Image(Base 64 String)</th>\n",
+       "      <th>image</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
        "Empty DataFrame\n",
        "Columns: [External ID, Supplier Product Code, External ID_y, Image(Base 64 String), image]\n",
        "Index: []"
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>External ID</th>\n      <th>Supplier Product Code</th>\n      <th>External ID_y</th>\n      <th>Image(Base 64 String)</th>\n      <th>image</th>\n    </tr>\n  </thead>\n  <tbody>\n  </tbody>\n</table>\n</div>"
+      ]
      },
      "metadata": {},
      "execution_count": 79
     }
    ],
-   "source": [
-    "df_3[df_3['image'].isna()]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_3.loc[1500:,:].to_csv('output/final-output-6.csv')"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [
+    "df_3.loc[1500:,:].to_csv('output/final-output-6.csv')"
+   ],
    "outputs": [],
-   "source": []
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "source": [
+    "img_df.to_csv(\"processed_images.csv\")"
+   ],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "image-pro-env",
-   "language": "python",
-   "name": "image-pro-env"
+   "name": "python3",
+   "display_name": "Python 3.9.4 64-bit ('image-pro-env': virtualenv)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -310,7 +408,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.4"
+  },
+  "interpreter": {
+   "hash": "b44a382db6b088e9b4d240c5209c3d39c6af3f8e91ec48911a367bc26ff9a0e1"
   }
  },
  "nbformat": 4,
