--- a/screens.ipynb
+++ b/screens.ipynb
@@ -10,13 +10,15 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6-final"
+   "version": "3.9.4"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "image-pro-env",
-   "display_name": "image-pro-env",
-   "language": "python"
+   "name": "python3",
+   "display_name": "Python 3.9.4 64-bit ('image-pro-env': virtualenv)"
+  },
+  "interpreter": {
+   "hash": "b44a382db6b088e9b4d240c5209c3d39c6af3f8e91ec48911a367bc26ff9a0e1"
   }
  },
  "nbformat": 4,
@@ -25,8 +27,6 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "import glob\n",
@@ -35,21 +35,25 @@
     "import pandas as pd\n",
     "import xlsxwriter\n",
     "import base64"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 130,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "files = glob.glob('THUMBNAILS/LEFT/*')"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 131,
-   "metadata": {},
+   "source": [
+    "re.split(\"[\\./]+\",files[2])[2]"
+   ],
    "outputs": [
     {
      "output_type": "execute_result",
@@ -62,24 +66,20 @@
      "execution_count": 131
     }
    ],
-   "source": [
-    "re.split(\"[\\./]+\",files[2])[2]"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 132,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "df = pd.read_excel('STOCK - REODER LEVELS.xlsx',engine='openpyxl',sheet_name='ODOO',usecols=[0,1,2,3])   "
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 133,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "image_dic = {}\n",
     "for img in files:\n",
@@ -88,84 +88,99 @@
     "    # name_path = name_path.replace(\" (1)\", \"\")\n",
     "    image_dic[name_path] =base64.b64encode(open(f'{img}', \"rb\").read()).decode('utf8')\n",
     "    "
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 134,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "img_df = pd.DataFrame(list(image_dic.items()),columns = ['Supplier/Supplier Product Code','image'])"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 99,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# img_df['Internal Reference']= img_df['Internal Reference'].str.replace(' ', '')"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 135,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "df_merged= pd.merge(df,\n",
     "img_df,\n",
     "how='outer',\n",
     "on='Supplier/Supplier Product Code')"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 121,
-   "metadata": {},
+   "source": [
+    "df_merged.info()"
+   ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "<class 'pandas.core.frame.DataFrame'>\nInt64Index: 2926 entries, 0 to 2925\nData columns (total 5 columns):\n #   Column                          Non-Null Count  Dtype  \n---  ------                          --------------  -----  \n 0   ITEMID                          2821 non-null   float64\n 1   External ID                     2821 non-null   object \n 2   Internal Reference              2821 non-null   object \n 3   Supplier/Supplier Product Code  2909 non-null   object \n 4   image                           720 non-null    object \ndtypes: float64(1), object(4)\nmemory usage: 137.2+ KB\n"
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 2926 entries, 0 to 2925\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column                          Non-Null Count  Dtype  \n",
+      "---  ------                          --------------  -----  \n",
+      " 0   ITEMID                          2821 non-null   float64\n",
+      " 1   External ID                     2821 non-null   object \n",
+      " 2   Internal Reference              2821 non-null   object \n",
+      " 3   Supplier/Supplier Product Code  2909 non-null   object \n",
+      " 4   image                           720 non-null    object \n",
+      "dtypes: float64(1), object(4)\n",
+      "memory usage: 137.2+ KB\n"
      ]
     }
    ],
-   "source": [
-    "df_merged.info()"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 136,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "clean_df=df_merged[~df_merged['image'].isna()]"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 103,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "clean_df.to_csv('output/right-images.csv')"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 138,
-   "metadata": {},
+   "source": [
+    "clean_df[clean_df['Internal Reference'].isna()]['Supplier/Supplier Product Code']"
+   ],
    "outputs": [
     {
      "output_type": "execute_result",
@@ -189,16 +204,14 @@
      "execution_count": 138
     }
    ],
-   "source": [
-    "clean_df[clean_df['Internal Reference'].isna()]['Supplier/Supplier Product Code']"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ]
 }
